--- a/www/index.html
+++ b/www/index.html
@@ -601,6 +601,27 @@
     	}
     	isSaved = false;
     }
+
+    function showToolBox() {
+		//Check all, return if fail.
+		var result = ""
+		$.get("/getEditor", { 
+			user: "{{ currBoard.boardUser }}",
+			boardID: {{ currBoard.boardID }},
+			boardEditor: "{{ user.email }}"
+		}).done(function( data ) {
+				if (data == "") {
+					document.getElementById("editinglocked").style.display = "none";
+    				document.getElementById("toolBoxButton").style.display = "none";
+    				document.getElementById("myTab").style.display = "block";
+    				document.getElementById("myTabContent").style.display = "block";
+    				return;
+    			}
+    			document.getElementById("editinglocked").style.display = "block";
+		});
+
+    	
+    }
 	</script>
 	<style>
 	table.center {
@@ -641,6 +662,9 @@
   	#infotable td {
   		padding:2px;
   		border-spacing:5px;
+  	}
+  	#myTab, #myTabContent , #editinglocked {
+  		display: none;
   	}
 	</style>
 	<!--End of Canvas Script-->
@@ -714,6 +738,10 @@
 				<!--Show set of buttons exclusive to board viewers-->
 				{% endif %}
 
+
+				<!--EDIT BUTTON-->
+				<div id="toolBoxButton"><button onclick="showToolBox()">Edit</button></div>
+				<div id="editinglocked">Someone else is editing. Please try again later.</div>
 				<!--TABSS-->
 				<ul id="myTab" class="nav nav-pills">
 					<li class="active"><a href="#new" data-toggle="tab">New Object</a></li>
