--- a/www/boardsettings.html
+++ b/www/boardsettings.html
@@ -15,6 +15,11 @@
 			var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
 		})();
 	</script>
+	<style>
+	th {
+		text-align: center;
+	}
+	</style>
 	<!--End of Google Login Script-->
 </head>
 <body>
@@ -39,8 +44,18 @@
 	<b>Settings Page for Board{{ board.boardID }} : {{ board.boardName }}</b>
 	<table align="center">
 	<hr>
+	<div>
+		<form name="input" action="./updateBoardName" method="post">
+			Change board name: <input type="text" name="newboardName"  value="{{ board.boardName }}">
+			<input type="hidden" name="boardID" value={{ board.boardID }}>
+			<input type="submit" value="Submit">
+		</form>
+	</div>
+	<p><p>
 	{% if board.followers|length < 1 %}
 	<tr><td> There is no one following this board. </td></tr>
+	{% else %}
+	<tr><th colspan="3">Who's Following</th></tr>
 	{% endif %}
 	{% for follower in board.followers %}
 	<tr>
